--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "convex": "^1.30.0",
     "expo": "~54.0.26",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -39,6 +40,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "svix": "^1.82.0"
