--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "convex": "^1.30.0",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.26",
     "expo-constants": "~18.0.10",
     "expo-file-system": "~19.0.20",
